--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="description" content="大连民族大学家教中心">
-<meta name="keywords" content="大连家教,民族家教,民大家教,好好学习家教网">
+<meta name="keywords" content="大连家教,民族家教,民大家教,易教家教网">
 <meta name="author" content="沈先春">
 <link rel="stylesheet" href="css/animate.css">
 <link rel="stylesheet" href="css/semantic.min.css" />
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-<title>好好学习家教中心</title>
+<title>易教网登陆中心</title>
+<link rel="short icon" href="images/logo.png" />
 <script type="text/javascript">
 	function change(){
 			var img=document.getElementById("vc");
@@ -55,7 +56,7 @@
 </head>
 <body scroll="auto" style="background: url(images/back1.jpg);background-size: 100% 100%;background-repeat:no-repeat;background-attachment: fixed;">
     
-    <div id="student"><img src="images/logo.png" height="80px" width="170px"></img></div>
+    <div id="student"><img src="images/logo.png" style="width:80px; height:100px;margin-top:-9px;"/></div>
 	
 	<div id="login">
    <form action="#" method="post" name="form1" style="padding-top:55px;">
