--- a/WebContent/regester.html
+++ b/WebContent/regester.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>好好学习注册</title>
+    <title>民大易教注册</title>
+    <link rel="short icon" href="images/logo.png" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   
 <body style="background: url(images/back1.jpg);background-size: 100% 100%;background-repeat:no-repeat;background-attachment: fixed;">
-  
-  
-  
-  
-   <div id="register">
+  	
+  	<div id="student"><img src="images/logo.png" style="width:50px; height:65px;margin-top:-9px;"/></div>
+   <div id="register" style="margin:-35px auto;">
    <form  action="RegisterAction" name="form1" method="post">
       <table class="retable" align="center"  style="padding-top:15px;">
          <tr>
